# forestres

./: .gitignore  LICENSE  README.md  pyproject.toml
src/drought_impact/: __init__.py  core.py  drought_detection.py  export.py  spatial_clustering.py  spatial_io.py  vegetation_metrics.py
src/forestres/: __init__.py  core.py  drought_detection.py  export.py  spatial_io.py  vegetation_metrics.py
tests/: test_real.py
